# babellm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: plan.md
babellm/: __init__.py  _http.py  exceptions.py  types.py
babellm/base/: __init__.py  provider.py
babellm/providers/ollama/: __init__.py  _serializers.py  client.py
examples/: 01_basic_chat.py  02_streaming_chat.py  03_generate.py  04_async_example.py  05_context_manager.py  06_multi_turn.py  README.md
tests/: __init__.py  conftest.py  test_exceptions.py  test_http.py  test_ollama_client.py  test_serializers.py  test_types.py
